--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ box-sizing: border-box;
 }
 
 body {
-    background-color: aliceblue;
+    background-color: #E5E5E5;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -25,11 +25,12 @@ body {
 
 .todo{
     width: 476px;
-    padding: 8px;
+    padding: 0 8px 25px 8px;
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;     
+    align-items: center;
+    box-shadow: 0 0 25px rgba(0,0,0,.5);   
 }
 
 .todo__high,
@@ -66,7 +67,7 @@ h2 {
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
-    color: #BBBBBB;
+    /* color: #BBBBBB; */
     padding-left: 12px;
 
 }
@@ -77,7 +78,7 @@ h2 {
     transform: rotate(-45deg);
     position: absolute;
     top: 16px;
-    right: 20px;
+    right: 19px;
     cursor: pointer;
 }
 
@@ -90,29 +91,62 @@ h2 {
 .task {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     border: 1px solid #989898;
     border-radius: 6px;
     padding: 12px;
 }
 
-[type="checkbox"] {
-    opacity: 0;
-    position: absolute;
-}
-
-label {
-    display: flex;
-}
+    [type="checkbox"] {
+        opacity: 0;
+        position: absolute;
+    }
 
 .custom-checkbox {
     display: inline-block;
-    width: 30px;
-    height: 30px;
-    border: 1px solid red;
+    min-width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 1px solid #989898;
+    margin-right: 8px;
+    
 
 }
 
-.btn .delet-task {
-    width: 20px;
-    height: 20px;
+.delet-task {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    margin-left: 20px;
+    
+}
+
+.task label {
+    display: flex;
+    align-items: flex-start;
+}
+
+
+/* не понимаю что тут происходит */
+
+
+[type="checkbox"]:focus + label .custom-checkbox {
+    outline-color:  black;
+    border-color: black;        
+}
+
+[type="checkbox"]:checked + label .custom-checkbox {
+    background: #989898;
+    border-color: #989898;
+    outline: 1px solid #989898;
+    outline-offset: 2px;
+    transform: scale(0.7);
+
+}
+
+[type="checkbox"]:checked:focus + label .custom-checkbox {
+    outline-color:  black;
 }
