--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     
 }
 
@@ -89,6 +90,7 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 100%;
 }
 
 .task {
@@ -98,6 +100,10 @@ h2 {
     border: 1px solid #989898;
     border-radius: 6px;
     padding: 12px;
+}
+
+.task-text {
+    word-break: break-all;
 }
 
     [type="checkbox"] {
@@ -126,6 +132,8 @@ h2 {
     margin-left: 20px;
     
 }
+
+
 
 .task label {
     display: flex;
